syntax = "proto3";

option java_package = "com.parthhrana.mayhemlauncher.datastore.proto";
option java_multiple_files = true;

message CorePreferences {
  bool activate_keyboard_in_drawer = 1;
  bool keep_device_wallpaper = 2;
  optional bool show_search_bar = 3;
  SearchBarPosition search_bar_position = 4;
  bool show_drawer_headings = 5;
  bool search_all_apps_in_drawer = 6;
  optional ClockType clock_type = 7;
  AlignmentFormat alignment_format = 8;
  TimeFormat time_format = 9;
  Theme theme = 10;
  bool hide_status_bar = 11;
}

enum SearchBarPosition {
  top = 0;
  bottom = 1;
}

enum ClockType {
  none = 0;
  digital = 1;
  analog_12 = 2;
  binary = 3;
  analog_0 = 4;
  analog_1 = 5;
  analog_2 = 6;
  analog_3 = 7;
  analog_4 = 8;
  analog_6 = 9;
  analog_60 = 10;
}

enum AlignmentFormat {
  left = 0;
  center = 1;
  right = 2;
}

enum TimeFormat {
  system = 0;
  twenty_four_hour = 1;
  twelve_hour = 2;
}

enum Theme {
  system_theme = 0;
  midnight = 1;
  jupiter = 2;
  teal = 3;
  candy = 4;
  pastel = 5;
  noon = 6;
  vlad = 7;
  groovy = 8;
}